--- a/.github/workflows/merge_to_release_branch.yml
+++ b/.github/workflows/merge_to_release_branch.yml
@@ -18,20 +18,29 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Authenticate and set context
-        uses: redhat-actions/oc-login@v1
+        uses: redhat-actions/oc-login@v1.1.2
         with:
           openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
           openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
           namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
       - name: Apply Build Yaml
         run: |
-          echo 'apply build yaml'
+          cd rsbc_df_vips_adapter_gateway/github_actions_yamls
+          oc process -f revproxy_build_template.yml --param-file revproxy_build_params.yml --param OUTPUT_IMAGE_STREAM_TAG=dev-test-build-$GITHUB_SHA | oc apply -f -
       - name: Start the build and push
         run: |
-          echo 'Build and Push'
-      - name: Manual approval for deployto Dev
+          oc start-build ${{ env.build_config_name }} --follow --wait
+
+  deploy-dev:
+    runs-on: ubuntu-latest
+    environment: dev
+    env:
+      build_config_name: "ride-vips-adapter-nginx-proxy-build-v2"
+      base_image_tag: "1"
+    steps:  
+      - name: Manual approval for deploy to Dev
         run: |
           echo 'manual approval for dev'
       - name: Update deploy manifests for Dev to Argocd
