--- a/.github/workflows/merge_to_release_branch.yml
+++ b/.github/workflows/merge_to_release_branch.yml
@@ -1,16 +1,17 @@
 name: Merge PR to Release Branch
 
 on:
-  push:
-    branches:   
-      - 'release**'
-  # pull_request:
-  #   types: [closed]
+  # push:
   #   branches:   
   #     - 'release**'
+  pull_request:
+    types: [closed]
+    branches:   
+      - 'release**'
 
 jobs:
   build-image:
+    name: Build and Push the Image
     runs-on: ubuntu-latest
     env:
       build_config_name: "ride-vips-adapter-nginx-proxy-build-v2"
@@ -34,29 +35,59 @@ jobs:
           oc start-build ${{ env.build_config_name }} --follow --wait
 
   deploy-dev:
+    name: Deploy to Dev
     runs-on: ubuntu-latest
     environment: dev
     needs: build-image
     env:
       build_config_name: "ride-vips-adapter-nginx-proxy-build-v2"
       base_image_tag: "1"
-    steps:  
-      - name: Manual approval for deploy to Dev
+      IMAGE_STREAM_TAG: dev-test-build-${{ github.sha}}
+    steps:
+      - name: Checkout Gitops repository
+        uses: actions/checkout@v3
+        with:
+          repository: bcgov-c/tenant-gitops-be5301
+          ref: deployment/rsbc-ride-vips-adapter
+          token: ${{ secrets.GITOPS_GITHUB_TOKEN }}
+      - name: Update Image tag for Dev deploy
+        uses: mikefarah/yq@v4.28.1
+        with:
+          cmd: yq eval -i '.images[0].newTag = "${{env.IMAGE_STREAM_TAG}}"' 'ride_vips_adapter/overlays/dev/kustomization.yaml'
+      - name: Check Changed value
         run: |
-          echo 'manual approval for dev'
-      - name: Update deploy manifests for Dev to Argocd
+          cat ride_vips_adapter/overlays/dev/kustomization.yaml
+      - name: Push Changes to Gitops repo
         run: |
-          echo 'update deploy dev'
-      - name: Manual approval for deploy to test
+          git add .
+          git commit -m "updated dev image details to yaml"
+          git push
+
+  deploy-test:
+    name: Deploy to Test
+    runs-on: ubuntu-latest
+    environment: test
+    needs: [build-image,deploy-dev]
+    env:
+      build_config_name: "ride-vips-adapter-nginx-proxy-build-v2"
+      base_image_tag: "1"
+      IMAGE_STREAM_TAG: dev-test-build-${{ github.sha}}
+    steps:
+      - name: Checkout Gitops repository
+        uses: actions/checkout@v3
+        with:
+          repository: bcgov-c/tenant-gitops-be5301
+          ref: deployment/rsbc-ride-vips-adapter
+          token: ${{ secrets.GITOPS_GITHUB_TOKEN }}
+      - name: Update Image tag for Dev deploy
+        uses: mikefarah/yq@v4.28.1
+        with:
+          cmd: yq eval -i '.images[0].newTag = "${{env.IMAGE_STREAM_TAG}}"' 'ride_vips_adapter/overlays/test/kustomization.yaml'
+      - name: Check Changed value
         run: |
-          echo 'manual approval for test'
-      - name: Update deploy manifests for test to Argocd
+          cat ride_vips_adapter/overlays/test/kustomization.yaml
+      - name: Push Changes to Gitops repo
         run: |
-          echo 'update deploy test'
-      # - name: Apply Build Yaml
-      #   run: |
-      #     cd rsbc_df_vips_adapter_gateway/github_actions_yamls
-      #     oc process -f revproxy_build_template.yml --param-file revproxy_build_params.yml --param OUTPUT_IMAGE_STREAM_TAG=build-$GITHUB_SHA | oc apply -f -
-      # - name: Start the build and push
-      #   run: |
-      #     oc start-build ${{ env.build_config_name }} --follow --wait
+          git add .
+          git commit -m "updated test image details to yaml"
+          git push
