--- a/.github/workflows/pr_main_checks.yml
+++ b/.github/workflows/pr_main_checks.yml
@@ -8,33 +8,37 @@ on:
       - 'master'
 
 jobs:
-  build-image:
+  merge_and_build:
+    name: Merge PR locally and build
     runs-on: ubuntu-latest
     env:
       build_config_name: "ride-vips-adapter-nginx-proxy-build-v2"
       base_image_tag: "1"
+      PR_NUMBER: ${{ github.event.number }}
+      PR_IMAGE_STREAM_TAG: pr-build-${{ github.sha}}
 
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Authenticate and set context
-        uses: redhat-actions/oc-login@v1
-        with:
-          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL_SILVER }}
-          openshift_token: ${{ secrets.OPENSHIFT_SA_PIPELINE_TOKEN_SILVER }}
-          namespace: "${{ secrets.OPENSHIFT_LICENSE_PLATE_SILVER }}-tools"
-      - name: Merge with target
+      - name: Merge the branch locally
         run: |
-          echo 'merge with target'
-      # - name: Docker login to repo
-      #   run: |
-      #     docker login -u docker -p $(oc whoami -t) ${{ secrets.OPENSHIFT_IMAGE_REPO }}
-      # - name: Pull Base Image
-      #   run: |
-      #     docker image pull ${{ secrets.NGINX_BASE_IMAGE_TOOLS }}:${{env.base_image_tag}}
-      #     docker image tag ${{ secrets.NGINX_BASE_IMAGE_TOOLS }}:${{env.base_image_tag}} nginx-custom:1
-      # - name: Test Build Image
-      #   run: |
-      #     cd rsbc_df_vips_adapter_gateway
-      #     docker build -t vips_adapter_build_test:1 .
+          git clone "https://github.com/bcgov/rsbc-ride-adapters"
+          git config --global user.email "ride_vips_actions@gov.bc.ca"
+          git config --global user.name "ride_vips_actions"
+          git config --global pull.rebase true
+          cd rsbc-ride-adapters
+          git fetch
+          git branch -a
+          git checkout $GITHUB_HEAD_REF      
+          git checkout $GITHUB_BASE_REF  
+          git merge $GITHUB_HEAD_REF 
+      - name: Docker login to repo
+        run: |
+          docker login -u docker -p $(oc whoami -t) ${{ secrets.OPENSHIFT_IMAGE_REPO }}
+      - name: Pull Base Image
+        run: |
+          docker image pull ${{ secrets.NGINX_BASE_IMAGE_TOOLS }}:${{env.base_image_tag}}
+          docker image tag ${{ secrets.NGINX_BASE_IMAGE_TOOLS }}:${{env.base_image_tag}} nginx-custom:1
+      - name: Test Build Image
+        run: |
+          cd rsbc_df_vips_adapter_gateway
+          docker build -t vips_adapter_build_test:1 .
