--- a/rsbc_df_vips_adapter_gateway/nginx.conf
+++ b/rsbc_df_vips_adapter_gateway/nginx.conf
@@ -101,6 +101,13 @@ http {
     }
   }
 
+  server { 
+		listen 8087;
+		location /metrics {
+			stub_status on;
+		}
+}
+
 #     server { # simple reverse-proxy
 #     listen       80;
 #     server_name  _;
