--- a/rsbc_df_vips_adapter_gateway/networking_deploy_dev.yml
+++ b/rsbc_df_vips_adapter_gateway/networking_deploy_dev.yml
@@ -27,11 +27,26 @@ spec:
         app: ride-vips-adapter-rev-proxy
     spec:
       containers:
+      - name: nginx-log-exporter
+        image: image-registry.apps.silver.devops.gov.bc.ca/be5301-dev/nginx-log-exporter:1.0
+        args: ["-config-file", "/etc/prometheus-nginxlog-exporter/config.hcl"]
+        resources:
+          requests:
+            cpu: 10m
+            memory: 100Mi
+        ports:
+        - name: nginx-log
+          containerPort: 4040
+        volumeMounts:
+        - name: logvol
+          mountPath: "/var/log/nginx/vipsadapter"
+        - name: exporter-config
+          mountPath: /etc/prometheus-nginxlog-exporter
       - name: nginx-exporter
         image: image-registry.apps.silver.devops.gov.bc.ca/be5301-dev/nginx-prometheus-exporter:1.0
         resources:
           requests:
-            cpu: 100m
+            cpu: 10m
             memory: 100Mi
         ports:
         - name: nginx-ex-port
@@ -142,6 +157,9 @@ spec:
           name: vipsgatewaynginxconfig
       - name: logvol
         emptyDir: {}
+      - name: exporter-config
+        configMap:
+          name: logexporterconfig
 
 ---
 
@@ -175,6 +193,26 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8087
+      name: tcp1
+  internalTrafficPolicy: Cluster
+  type: ClusterIP
+  ipFamilyPolicy: SingleStack
+  sessionAffinity: None
+  selector:
+    app: ride-vips-adapter-rev-proxy
+
+---
+
+kind: Service
+apiVersion: v1
+metadata:
+  name: ride-vips-nginx-proxy-cluster-ip-log-exporter
+  namespace: be5301-dev
+spec:
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 4040
       name: tcp1
   internalTrafficPolicy: Cluster
   type: ClusterIP
