--- a/rsbc_df_vips_adapter_gateway/nginx.conf
+++ b/rsbc_df_vips_adapter_gateway/nginx.conf
@@ -18,8 +18,14 @@ http {
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
+    # logging config
+    log_format custom   '$remote_addr - $remote_user [$time_local] '
+                      '"$request" $status $body_bytes_sent "$http_host" "$hostname" '
+                      '"$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/opt/rh/rh-nginx120/log/nginx/access.log  main;
+    # access_log  /var/opt/rh/rh-nginx120/log/nginx/access.log  main;
+    access_log  /var/opt/rh/rh-nginx120/log/nginx/access.log  custom;
+    error_log /var/opt/rh/rh-nginx120/log/nginx/error.log;
 
     sendfile        on;
     tcp_nopush      on;
