--- a/rsbc_df_vips_adapter_gateway/networking_deploy_dev.yml
+++ b/rsbc_df_vips_adapter_gateway/networking_deploy_dev.yml
@@ -310,7 +310,7 @@ spec:
   maxReplicas: 2
   minReplicas: 1
   scaleTargetRef:
-    apiVersion: v1
+    apiVersion: apps/v1
     kind: Deployment
     name: ride-vips-adapter-rev-proxy
   targetCPUUtilizationPercentage: 85
